closer to the finish line

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,54 @@
 * {
-    margin: 0px;
+    margin: 20px;
     padding: 0px;
+}
+header{
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 10px solid rgb(7, 7, 60);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .header {
-    text-align: left
+    text-align: center
+}
+nav{
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 8px solid rgb(7, 7, 60);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
-.navbar {
-    text-align: right;
-}
 li {
     display: inline;
 }
 footer {
+    text-align: center;
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 6px solid rgb(7, 7, 60);
+}
+img{
+    width: 100%;
+    margin: 20px;
+    border: 6px solid rgb(7, 7, 60);
+}
+.about-me{
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 6px solid rgb(7, 7, 60);
+    text-align: center;
+}
+.contact{
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 6px solid rgb(7, 7, 60);
+    text-align: center;
+}
+.projects{
+    background-color: darkolivegreen;
+    color: rgb(7, 7, 60);
+    border: 6px solid rgb(7, 7, 60);
     text-align: center;
 }
